# py-libhdate

./: .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  DEVELOPMENT.rst  MANIFEST.in  README.md  README.rst  hdate.py  hdate_julian.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  pull_request_template.md  release-drafter.yaml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: auto-release.yaml  auto-versioning.yaml  autoversioning.yaml  release-draft.yaml  release.yaml  run-tests.yaml  run_tests.yaml  update-changelog.yaml
changelog.d/: 20240607_114913_ttmost_infra.rst  20240607_141122_ttmost_infra.rst
docs/source/: api_reference.rst  conf.py  development.rst  hdate.rst  index.rst  modules.rst  quickstart.rst  user_guide.rst
hdate/: __init__.py  common.py  converters.py  daf_yomi.py  date.py  date_info.py  gematria.py  hdate_julian.py  hdate_string.py  hebrew_date.py  holidays.py  htables.py  location.py  omer.py  parasha.py  tekoufa.py  tekufot.py  translations.py  translator.py  zmanim.py
hdate/translations/: en.json  fr.json  he.json
src/: Makefile.am  Makefile.in  deprecated.c  hdate.h  hdate_holyday.c  hdate_julian.c  hdate_parasha.c  hdate_strings.c  hdate_sun_time.c  hdatepp.h  support.h
src/hdate/: __init__.py  date.py  hdate_julian.py  hdate_string.py  htables.py  zmanim.py
tests/: conftest.py  test_common.py  test_converters.py  test_daf_yomi.py  test_date_info.py  test_gematria.py  test_hdate.py  test_hdate_api.py  test_hdate_string.py  test_hebrew_date.py  test_holidays.py  test_omer.py  test_parasha.py  test_tekufot.py  test_translator.py  test_zmanim.py
tests/__snapshots__/: test_hdate_api.ambr  test_hebrew_date.ambr  test_omer.ambr  test_parasha.ambr
utils/: translations.py
