[project]
name = "hdate"
version = "0.11.1"
description = "Jewish/Hebrew date and Zmanim in native Python 2.7/3.x"
authors = [
    {name = "Royi Reshef", email = "roy.myapp@gmail.com"},
]
maintainers = [
    {name = "Tsvi Mostovicz", email = "ttmost@gmail.com"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
    "num2words>=0.5.14"
]

[project.urls]
repository = "https://github.com/py-libhdate/py-libhdate"
documentation = "https://py-libhdate.readthedocs.io/en/latest/"

[project.optional-dependencies]
astral = [
    "astral<3.0,>=2.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
# Show summary output for all types of failures
# Run doctest that are part of docstrings
# Run doctest in RST files
addopts = "-ra --doctest-modules --doctest-glob=*.rst -n auto --dist loadscope --timeout=300"

[dependency-groups]
dev = [
    "tox>=4.23.2",
    "pylint>=3.3.3",
    "isort>=5.13.2",
    "black>=24.10.0",
    "tox-pdm>=0.7.2",
    "pre-commit>=4.1.0",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
]
test = [
    "pytest>=8.3.4",
    "pytest-coverage>=0.0",
    "pytest-xdist>=3.6.1",
    "hypothesis>=6.124.1",
    "syrupy>=4.8.1",
    "pytest-profiling>=1.8.1",
    "pytest-timeout>=2.3.1",
]
docs = [
    "Sphinx>=7.4.7",
    "myst-parser>=3.0.1",
    "sphinx-contributors>=0.2.7",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.bumpversion]
current_version = "0.11.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Release: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Release version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"