[project]
name = "hdate"
version = "1.1.2"
description = "Jewish/Hebrew date and Zmanim in native Python 2.7/3.x"
authors = [
    {name = "Royi Reshef", email = "roy.myapp@gmail.com"},
]
maintainers = [
    {name = "Tsvi Mostovicz", email = "ttmost@gmail.com"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "num2words>=0.5.14"
]

[project.urls]
repository = "https://github.com/py-libhdate/py-libhdate"
documentation = "https://py-libhdate.readthedocs.io/en/latest/"

[project.optional-dependencies]
astral = [
    "astral>=3.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.report]
exclude_also = [
    "return NotImplemented",  # Don't force checking of not implemented return values
    "if TYPE_CHECKING:",      # Don't complain on type checking blocks
]

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"
ignore = [
    "C0301",  # line too long - handled by black
]

[tool.pytest.ini_options]
# Show summary output for all types of failures
# Run doctest that are part of docstrings
# Run doctest in RST files
addopts = "-ra --doctest-modules --doctest-glob=*.rst -n auto --timeout=300"

[dependency-groups]
dev = [
    "tox>=4.34.1",
    "tox-pdm>=0.7.2",
    "flake8>=7.3.0",
    "flake8-bugbear>=25.11.29",
    "pylint>=4.0.4",
    "isort>=7.0.0",
    "black>=26.1.0",
    "pre-commit>=4.5.1",
    "mypy>=1.19.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-coverage>=0.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.150.2",
    "syrupy>=5.0.0",
    "pytest-profiling>=1.8.1",
    "pytest-timeout>=2.4.0",
]
docs = [
    "Sphinx>=8.1.3",
    "myst-parser>=4.0.1",
    "sphinx-contributors>=0.2.7",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.bumpversion]
current_version = "1.1.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Release: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Release version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
